@@ -55,6 +55,3 @@
 	- SSL cert support
 	- Namecheap too
 	- Pro only
-
- - Sub-directories under S3 buckets
-	- https://www.virtualmin.com/node/22224
