@@ -2090,8 +2090,8 @@ backup_mode5=Upload to server
 backup_mode4desc=The resulting Virtualmin backup file will be downloaded in your browser, for saving on your PC.
 backup_akey=Access key ID
 backup_skey=Secret key ID
-backup_s3file=File under bucket
-backup_nos3file=One per domain
+backup_s3path=Path under bucket
+backup_nos3path=At top level
 backup_s3rrs=Use reduced redundancy storage?
 backup_ftpserver=FTP server
 backup_sshserver=SSH server
@@ -2122,6 +2122,7 @@ backup_niceftp=$1 on FTP server $2
 backup_nicescp=$1 on SSH server $2
 backup_nicefile=local file $1
 backup_nices3=Amazon S3 bucket $1
+backup_nices3p=$2 in Amazon S3 bucket $1
 backup_nicedownload=downloaded file
 backup_niceupload=uploaded file
 backup_senabled1=Virtualmin's scheduled backup has been enabled for all virtual servers.
